# cpr-indoornav-base

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
config/: autonomy_bridge.yaml  cyclone_dds.xml  fleet_bridge.yaml
launch/: api_bridge.launch  indoornav_docking_controller.launch  load_autonomy_params.launch  load_fleet_params.launch  relays.launch  start_indoornav_docking.launch  start_indoornav_local.launch  start_indoornav_remote.launch
scripts/: install_depends  reconfigure_apache  reconfigure_api  reconfigure_chrony  reconfigure_iptables  reconfigure_ros_setup  reconfigure_ssh  setup  setup_netplan  start_api  start_autonomy_bridge  start_fleet_bridge  start_navigation  tf_republisher
src/cpr_indoornav_base/: installation.py
