<?xml version="1.0"?>
<package format="2">
  <name>cpr_indoornav_base</name>
  <version>0.3.3</version>
  <description>Remote launch files for starting IndoorNav on a backpack PC</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>clearpath_api</exec_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>wireless_watcher</exec_depend>

  <!-- Dependencies for OTTO Motors ROS2 API -->
  <exec_depend>clearpath_api</exec_depend>

  <!-- ROS2 Dependencies -->
  <!-- Temporarily disabled while we sort out build-farm issues
       These will need to be manually installed!
  <exec_depend>foxy_ros1_bridge</exec_depend>
  <exec_depend>foxy_ros_base</exec_depend>
  <exec_depend>foxy_rmw_cyclonedds_cpp</exec_depend>
  -->

  <export>
  </export>
</package>
